Enhance responsive behavior of section filters with collapse and expand options

--- a/app/sass/components/layout.scss
+++ b/app/sass/components/layout.scss
@@ -89,6 +89,7 @@ div.layout {
         position: fixed;
         min-height: 100%;
         color: $layout-side-color;
+        z-index: 2;
 
         .modules {
             @include row;
