--- a/app/sass/components/modules/top-filter.scss
+++ b/app/sass/components/modules/top-filter.scss
@@ -35,16 +35,15 @@
         float: left;
 
         > i {
-            display: none;
-            margin: (($header-height - $section-header-font-size) / 4.5) $filter-button-padding / -2 0 $filter-button-padding / 2;
+            margin: (($header-height - $section-header-font-size) / 4.5) 0 0 $filter-button-padding / 2;
             font-size: $section-header-font-size * 1.3;
             line-height: 1;
 
-            &.show {
-                display: inline-block;
+            &.inactive {
                 margin-left: $filter-button-padding / 2;
                 margin-right: 0;
                 color: $section-list-icon-color;
+
                 &:hover {
                     color: $section-header-color;
                 }
@@ -99,13 +98,13 @@
         font-size: $section-header-font-size - .1;
         padding: ($filter-button-padding / 2) $filter-button-padding * 2;
 
-        &:hover {
-            background: $filter-button-bg-color-hov;
-        }
-
         span {
             line-height: 1 + $filter-button-padding;
         }
+    }
+
+    > div > button:hover {
+        background: $filter-button-bg-color-hov;
     }
 
 }
