--- a/app/sass/theme/responsive.scss
+++ b/app/sass/theme/responsive.scss
@@ -2,7 +2,7 @@
 $full-menu-min-size-bp:           new-breakpoint(max-width 67em);
 $full-menu-min-size:              14em;
 
-$full-filter-size-bp:             new-breakpoint(max-width 94em);
+$full-filter-size-bp-2:             new-breakpoint(max-width 94em);
 
 @include media($full-menu-min-size-bp) {
     div.layout {
@@ -21,13 +21,17 @@ $full-filter-size-bp:             new-breakpoint(max-width 94em);
     }
 }
 
-@include media($full-filter-size-bp) {
-    .top-filter {
-        min-width: 65em;
+@include media($full-filter-size-bp-2) {
+    .main-content-list.filter-2,
+    .top-filter.filter-2 {
+        min-width: 60em;
+    }
 
+    .top-filter.filter-2 {
         .filters {
             > i {
                 display: inline-block;
+
                 &.show {
                     margin: (($header-height - $section-header-font-size) / 4.5) $filter-button-padding / -2 0 $filter-button-padding / 2;
                 }
@@ -36,6 +40,16 @@ $full-filter-size-bp:             new-breakpoint(max-width 94em);
             > span {
                 width: 0;
                 opacity: 0;
+            }
+        }
+
+        .select button {
+            span {
+                max-width: $select-list-button-max-width / 1.5;
+            }
+
+            &.active span {
+                min-width: $select-list-button-max-width / 1.5;
             }
         }
     }
