--- a/app/sass/components/mixins.scss
+++ b/app/sass/components/mixins.scss
@@ -4,3 +4,13 @@
     white-space: nowrap;
     text-overflow: ellipsis;
 }
+
+%icon {
+    display: inline-block;
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
