--- a/app/sass/components/modules/content-list.scss
+++ b/app/sass/components/modules/content-list.scss
@@ -1,4 +1,5 @@
 .main-content-list {
+    margin-bottom: 6em;
 
     li.cl > div {
         cursor: pointer;
@@ -76,6 +77,7 @@
                     &:hover {
                         background: $base-accent-color;
                     }
+
 
                     > i {
                         left: $section-list-icon-left * $content-list-item-2-icon-left;
