--- a/app/sass/theme/variables.scss
+++ b/app/sass/theme/variables.scss
@@ -1,17 +1,3 @@
-// Accent Colors
-$blue:                                  #049cdb;
-$dark-blue:                             #0064cd;
-$green:                                 #87b848;
-$lime:                                  #beca68;
-$red:                                   #a52b1f;
-$yellow:                                #ffc40d;
-$orange:                                #f90;
-$dark-orange:		                    #ae4901;
-$pink:                                  #c3325f;
-$purple:                                #7a43b6;
-$gray:                                  darken($light-gray, 20%);
-
-$base-accent-color:                     $blue;
 $error-color:                           lighten($red, 15%);
 $notice-color:                          $yellow;
 
@@ -36,6 +22,9 @@ $highlight-color:                       #fff;
 
 $base-button-color:                     $light-gray;
 $base-button-border-color:              $gray;
+
+$secondary-button-bg-color:             $dark-gray;
+$secondary-button-bg-color-hov:         darken($dark-gray, 10%);
 
 // layout formatting
 $header-height:                         modular-scale($base-font-size, 2, $octave);
@@ -76,8 +65,6 @@ $section-list-icon-text-pad:            modular-scale($section-list-icon-left, 3
 // filter buttons
 $filter-button-padding:                 .5em;
 $filter-button-border:                  none;
-$filter-button-bg-color:                $dark-gray;
-$filter-button-bg-color-hov:            darken($dark-gray, 10%);
 $filter-button-margin-top:              .45em;
 $filter-select-margin-top:              .35em;
 
