--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -269,78 +269,6 @@ input[type="submit"] {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
-input[type="submit"].primary,
-button.primary {
-  background-color: #049cdb;
-  color: #fff; }
-  input[type="submit"].primary:hover,
-  button.primary:hover {
-    background-color: #0378a9;
-    color: #e6e6e6; }
-
-.fa-spin {
-  -webkit-animation: spin 1.4s infinite linear;
-  -moz-animation: spin 1.4s infinite linear;
-  animation: spin 1.4s infinite linear; }
-
-input.ng-invalid {
-  border-color: #d94637;
-  background-color: #fef9f8;
-  box-shadow: inset 0 1px 8px #f2bdb8, 0 0 8px #f2bdb8; }
-
-.error-feedback {
-  display: block;
-  padding: .5em;
-  background-color: #d94637;
-  border-radius: 0.1875em;
-  color: #e6e6e6; }
-
-.notice-feedback {
-  display: block;
-  padding: .5em;
-  background-color: #ffc40d;
-  border-radius: 0.1875em;
-  color: #333; }
-
-.select button {
-  border-radius: .45em; }
-  .select button:focus {
-    outline: 0; }
-.select .select-dropdown {
-  border-radius: .3em;
-  position: relative;
-  background: #fff;
-  border: 0.1em solid #c4c4c4; }
-  .select .select-dropdown:after, .select .select-dropdown:before {
-    bottom: 100%;
-    border: solid transparent;
-    content: ' ';
-    width: 0;
-    height: 0;
-    position: absolute;
-    pointer-events: none; }
-  .select .select-dropdown:after {
-    border-color: rgba(119, 100, 213, 0);
-    border-bottom-color: #fff;
-    border-width: 0.5em;
-    left: 50%;
-    margin-left: -0.5em;
-    z-index: 3; }
-  .select .select-dropdown:before {
-    border-color: rgba(194, 225, 245, 0);
-    border-bottom-color: #c4c4c4;
-    border-width: 0.5em;
-    left: 50%;
-    margin-left: -0.5em;
-    z-index: 2; }
-
-button {
-  background-color: #049cdb;
-  color: #fff; }
-  button:hover {
-    background-color: #0378a9;
-    color: #e6e6e6; }
-
 .intro {
   max-width: 68em;
   margin-left: auto;
@@ -604,76 +532,78 @@ div.layout {
   .top-filter > div > button:hover {
     background: #1a1a1a; }
 
-.main-content-list li.cl > div {
-  cursor: pointer;
-  position: relative;
-  padding: 0 1em;
-  color: #262626;
-  margin-top: 2px; }
-  .main-content-list li.cl > div.active, .main-content-list li.cl > div:hover {
-    background: #049cdb;
-    color: #fff; }
+.main-content-list {
+  margin-bottom: 6em; }
+  .main-content-list li.cl > div {
+    cursor: pointer;
+    position: relative;
+    padding: 0 1em;
+    color: #262626;
+    margin-top: 2px; }
+    .main-content-list li.cl > div.active, .main-content-list li.cl > div:hover {
+      background: #049cdb;
+      color: #fff; }
+    .main-content-list li.cl > div > i {
+      color: #404040; }
+    .main-content-list li.cl > div > span,
+    .main-content-list li.cl > div > div {
+      display: block;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis; }
+  .main-content-list li.ic > div {
+    padding-left: 3.51563em; }
   .main-content-list li.cl > div > i {
-    color: #404040; }
-  .main-content-list li.cl > div > span,
-  .main-content-list li.cl > div > div {
-    display: block;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis; }
-.main-content-list li.ic > div {
-  padding-left: 3.51563em; }
-.main-content-list li.cl > div > i {
-  position: absolute; }
-.main-content-list > li.cl {
-  border-top: #f7f7f7 2px solid;
-  background: #f7f7f7; }
-  .main-content-list > li.cl > div {
-    min-height: 3.16128em;
-    max-height: 3.16128em;
-    background: #d0d0d0;
-    margin-top: 0; }
-    .main-content-list > li.cl > div.active, .main-content-list > li.cl > div:hover {
-      background: #049cdb; }
-    .main-content-list > li.cl > div > i {
-      left: 0.66667em;
-      top: 0.4em;
-      font-size: 1.778em; }
-    .main-content-list > li.cl > div > span {
-      font-size: 1.333em;
-      line-height: 1.333em;
-      padding: 0.45707em 0; }
-  .main-content-list > li.cl > ul li.cl {
-    background: #d0d0d0; }
-    .main-content-list > li.cl > ul li.cl > div {
-      min-height: 2.61792em;
-      max-height: 2.61792em;
-      background: #eaeaea; }
-      .main-content-list > li.cl > ul li.cl > div.active, .main-content-list > li.cl > ul li.cl > div:hover {
+    position: absolute; }
+  .main-content-list > li.cl {
+    border-top: #f7f7f7 2px solid;
+    background: #f7f7f7; }
+    .main-content-list > li.cl > div {
+      min-height: 3.16128em;
+      max-height: 3.16128em;
+      background: #d0d0d0;
+      margin-top: 0; }
+      .main-content-list > li.cl > div.active, .main-content-list > li.cl > div:hover {
         background: #049cdb; }
-      .main-content-list > li.cl > ul li.cl > div > i {
-        left: 0.93333em;
-        top: 0.25em;
+      .main-content-list > li.cl > div > i {
+        left: 0.66667em;
+        top: 0.4em;
         font-size: 1.778em; }
-      .main-content-list > li.cl > ul li.cl > div > span {
-        font-size: 1.2em;
-        line-height: 1.2em;
-        padding: 0.47264em 0; }
-    .main-content-list > li.cl > ul li.cl > ul {
-      opacity: .5;
-      height: 0;
-      overflow: hidden; }
-      .main-content-list > li.cl > ul li.cl > ul.expand {
-        opacity: 1;
-        height: auto; }
-      .main-content-list > li.cl > ul li.cl > ul li.cl > div {
-        background: #f7f7f7;
-        padding-top: 1px;
-        margin-top: 1px; }
-        .main-content-list > li.cl > ul li.cl > ul li.cl > div.active, .main-content-list > li.cl > ul li.cl > ul li.cl > div:hover {
+      .main-content-list > li.cl > div > span {
+        font-size: 1.333em;
+        line-height: 1.333em;
+        padding: 0.45707em 0; }
+    .main-content-list > li.cl > ul li.cl {
+      background: #d0d0d0; }
+      .main-content-list > li.cl > ul li.cl > div {
+        min-height: 2.61792em;
+        max-height: 2.61792em;
+        background: #eaeaea; }
+        .main-content-list > li.cl > ul li.cl > div.active, .main-content-list > li.cl > ul li.cl > div:hover {
           background: #049cdb; }
-      .main-content-list > li.cl > ul li.cl > ul li.cl:first-child > div {
-        margin-top: 0; }
+        .main-content-list > li.cl > ul li.cl > div > i {
+          left: 0.93333em;
+          top: 0.25em;
+          font-size: 1.778em; }
+        .main-content-list > li.cl > ul li.cl > div > span {
+          font-size: 1.2em;
+          line-height: 1.2em;
+          padding: 0.47264em 0; }
+      .main-content-list > li.cl > ul li.cl > ul {
+        opacity: .5;
+        height: 0;
+        overflow: hidden; }
+        .main-content-list > li.cl > ul li.cl > ul.expand {
+          opacity: 1;
+          height: auto; }
+        .main-content-list > li.cl > ul li.cl > ul li.cl > div {
+          background: #f7f7f7;
+          padding-top: 1px;
+          margin-top: 1px; }
+          .main-content-list > li.cl > ul li.cl > ul li.cl > div.active, .main-content-list > li.cl > ul li.cl > ul li.cl > div:hover {
+            background: #049cdb; }
+        .main-content-list > li.cl > ul li.cl > ul li.cl:first-child > div {
+          margin-top: 0; }
 
 .select {
   position: relative; }
@@ -730,13 +660,100 @@ div.layout {
         color: #666666;
         float: right; }
 
+.pagination {
+  text-align: center;
+  position: fixed;
+  left: 20.83333%;
+  right: 0;
+  bottom: 2em; }
+
+input[type="submit"].primary,
+button.primary {
+  background-color: #049cdb;
+  color: #fff; }
+  input[type="submit"].primary:hover,
+  button.primary:hover {
+    background-color: #0378a9;
+    color: #e6e6e6; }
+input[type="submit"]:disabled,
+button:disabled {
+  opacity: .3;
+  cursor: default; }
+
+.fa-spin {
+  -webkit-animation: spin 1.4s infinite linear;
+  -moz-animation: spin 1.4s infinite linear;
+  animation: spin 1.4s infinite linear; }
+
+input.ng-invalid {
+  border-color: #d94637;
+  background-color: #fef9f8;
+  box-shadow: inset 0 1px 8px #f2bdb8, 0 0 8px #f2bdb8; }
+
+.error-feedback {
+  display: block;
+  padding: .5em;
+  background-color: #d94637;
+  border-radius: 0.1875em;
+  color: #e6e6e6; }
+
+.notice-feedback {
+  display: block;
+  padding: .5em;
+  background-color: #ffc40d;
+  border-radius: 0.1875em;
+  color: #333; }
+
+.select button {
+  border-radius: .45em; }
+  .select button:focus {
+    outline: 0; }
+.select .select-dropdown {
+  border-radius: .3em;
+  position: absolute;
+  background: #fff;
+  border: 0.1em solid #c4c4c4; }
+  .select .select-dropdown:after, .select .select-dropdown:before {
+    bottom: 100%;
+    border: solid transparent;
+    content: ' ';
+    width: 0;
+    height: 0;
+    position: absolute;
+    pointer-events: none; }
+  .select .select-dropdown:after {
+    border-color: rgba(119, 100, 213, 0);
+    border-bottom-color: #fff;
+    border-width: 0.5em;
+    left: 50%;
+    margin-left: -0.5em;
+    z-index: 3; }
+  .select .select-dropdown:before {
+    border-color: rgba(194, 225, 245, 0);
+    border-bottom-color: #c4c4c4;
+    border-width: 0.5em;
+    left: 50%;
+    margin-left: -0.5em;
+    z-index: 2; }
+
+button {
+  background-color: #049cdb;
+  color: #fff; }
+  button:hover {
+    background-color: #0378a9;
+    color: #e6e6e6; }
+  button.secondary {
+    background-color: #333; }
+    button.secondary:hover {
+      background-color: #1a1a1a; }
+
 @media screen and (max-width: 67em) {
   div.layout > header .title {
     width: 7em; }
   div.layout > aside {
     width: 14em; }
   div.layout > .main {
-    margin-left: 14em; } }
+    left: 14em; } }
 @media screen and (max-width: 94em) {
   .main-content-list.filter-2,
   .top-filter.filter-2 {
@@ -825,15 +842,15 @@ div.layout > aside {
   -webkit-transition: opacity cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s;
   -moz-transition: opacity cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s;
   transition: opacity cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s; }
-.list-animate.ng-leave, .list-animate.ng-move {
+.list-animate.ng-move {
   -webkit-transition: opacity cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s;
   -moz-transition: opacity cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s;
   transition: opacity cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s; }
-.list-animate.ng-leave, .list-animate.ng-move-active, .list-animate.ng-enter.ng-enter-active, .list-animate.ng-move.ng-move-active {
+.list-animate.ng-move-active, .list-animate.ng-enter.ng-enter-active, .list-animate.ng-move.ng-move-active {
   opacity: 1; }
 .list-animate.ng-move {
   opacity: .5; }
-.list-animate.ng-enter, .list-animate.ng-leave.ng-leave-active {
+.list-animate.ng-enter {
   opacity: 0; }
 .list-animate.ng-enter-stagger {
   -webkit-transition-delay: .12s;
