--- a/app/views/runner/available.html
+++ b/app/views/runner/available.html
@@ -18,7 +18,7 @@
     </div>
 </div>
 <ul class="main-content-list appear-delayed ng-hide filter-2" ng-show="available.storiesLoaded">
-    <li class="ic cl list-animate" ng-animate="'animate'" ng-repeat="book in storybooks() | storybookSearchFilter:app.searchQuery | storybookSetFilter:available.filter.set.key | storybookTagFilter:available.filter.tag.key">
+    <li class="ic cl list-animate" ng-repeat="book in storybooks() | storybookSearchFilter:app.searchQuery | storybookSetFilter:available.filter.set.key | storybookTagFilter:available.filter.tag.key | storybookPaginationFilter: available.currentPage : available.maxScenarios">
         <div ng-class="{'active':available.selectedItem === 'book'+book.id}" ng-click="available.selectedItem = 'book'+book.id">
             <i class="fa fa-bars" ng-click="available.toggleExpand('book',book.id)"></i>
             <span>{{ book.title }}</span>
@@ -50,3 +50,4 @@
         </ul>
     </li>
 </ul>
+<div pagination ng-show="available.storiesLoaded" class="pagination appear-delayed ng-hide" has-next="available.hasMorePages()" current-page="available.currentPage" />
