--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,7 +1,7 @@
 button,
 input[type="submit"] {
   -webkit-font-smoothing: antialiased;
-  background-color: #477DCA;
+  background-color: #477dca;
   border-radius: 0.1875em;
   color: white;
   display: inline-block;
@@ -18,7 +18,7 @@ input[type="submit"] {
 body {
   -webkit-font-smoothing: antialiased;
   background-color: white;
-  color: #333;
+  color: #333333;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1em;
   line-height: 1.5; }
@@ -54,7 +54,7 @@ a {
   -webkit-transition: color 0.1s linear;
   -moz-transition: color 0.1s linear;
   transition: color 0.1s linear;
-  color: #477DCA;
+  color: #477dca;
   text-decoration: none; }
   a:hover {
     color: #2c5999; }
@@ -63,7 +63,7 @@ a {
     outline: none; }
 
 hr {
-  border-bottom: 1px solid #DDD;
+  border-bottom: 1px solid #dddddd;
   border-left: none;
   border-right: none;
   border-top: none;
@@ -74,7 +74,7 @@ img {
   max-width: 100%; }
 
 blockquote {
-  border-left: 2px solid #DDD;
+  border-left: 2px solid #dddddd;
   color: #595959;
   margin: 1.5em 0;
   padding-left: 0.75em; }
@@ -87,7 +87,7 @@ cite {
 
 fieldset {
   background: #f7f7f7;
-  border: 1px solid #DDD;
+  border: 1px solid #dddddd;
   margin: 0 0 0.75em 0;
   padding: 1.5em; }
 
@@ -117,7 +117,7 @@ select[multiple=multiple] {
   transition: border-color;
   background-color: white;
   border-radius: 0.1875em;
-  border: 1px solid #DDD;
+  border: 1px solid #dddddd;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1em;
@@ -131,7 +131,7 @@ select[multiple=multiple] {
   textarea:focus,
   input[type="email"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="url"]:focus, input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus,
   select[multiple=multiple]:focus {
-    border-color: #477DCA;
+    border-color: #477dca;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 5px rgba(55, 112, 192, 0.7);
     outline: none; }
 
@@ -172,7 +172,7 @@ th {
   text-align: left; }
 
 td {
-  border-bottom: 1px solid #DDD;
+  border-bottom: 1px solid #dddddd;
   padding: 0.75em 0; }
 
 tr, td, th {
@@ -210,7 +210,7 @@ input[type="submit"] {
 
 .progress-bar {
   background-color: #f2f2f2;
-  border: 1px solid #DDD;
+  border: 1px solid #dddddd;
   box-shadow: inset 0 0 3px 0 rgba(115, 115, 115, 0.15);
   border-radius: 0.1875em;
   height: 30px;
@@ -238,26 +238,31 @@ input[type="submit"] {
 @-webkit-keyframes progress {
   0% {
     background-position: 0 0; }
+
   100% {
     background-position: 40px 0; } }
 @-moz-keyframes progress {
   0% {
     background-position: 0 0; }
+
   100% {
     background-position: 40px 0; } }
 @-ms-keyframes progress {
   0% {
     background-position: 0 0; }
+
   100% {
     background-position: 40px 0; } }
 @-o-keyframes progress {
   0% {
     background-position: 0 0; }
+
   100% {
     background-position: 40px 0; } }
 @keyframes progress {
   0% {
     background-position: 0 0; }
+
   100% {
     background-position: 40px 0; } }
 .select .select-dropdown li.active:after {
@@ -328,7 +333,7 @@ input[type="submit"] {
 body {
   margin: 0;
   background-color: #e6e6e6;
-  color: #333; }
+  color: #333333; }
   body h1,
   body h2,
   body h3,
@@ -348,7 +353,7 @@ div.layout {
     z-index: 10000; }
     div.layout > header .title,
     div.layout > header .search {
-      color: #DDD;
+      color: #dddddd;
       font-size: 2em;
       position: relative;
       float: left; }
@@ -379,11 +384,11 @@ div.layout {
         background: none;
         border: 0;
         box-shadow: none;
-        color: #DDD;
+        color: #dddddd;
         border-radius: 0; }
         div.layout > header .search input:-webkit-autofill {
           -webkit-box-shadow: 0 0 0 50px #1a1a1a inset;
-          -webkit-text-fill-color: #DDD; }
+          -webkit-text-fill-color: #dddddd; }
   div.layout > aside,
   div.layout > .main {
     top: 4em; }
@@ -416,9 +421,9 @@ div.layout {
         div.layout > aside .modules li:hover {
           cursor: pointer;
           background: #666666;
-          color: #fff; }
+          color: white; }
         div.layout > aside .modules li.active {
-          background: #000;
+          background: black;
           color: #049cdb; }
         div.layout > aside .modules li i.reporter:before {
           content: '\f0f6'; }
@@ -442,7 +447,7 @@ div.layout {
         display: table;
         clear: both; }
       div.layout > aside .sections li:hover, div.layout > aside .sections li.active {
-        color: #fff;
+        color: white;
         background-color: #666666; }
       div.layout > aside .sections li:hover {
         cursor: pointer;
@@ -463,22 +468,9 @@ div.layout {
   cursor: pointer;
   min-height: 4em;
   max-height: 4em;
-  padding: 0 1em;
   background: #c4c4c4;
   color: #262626;
   white-space: nowrap; }
-  .top-filter.active {
-    background: #049cdb;
-    color: #fff; }
-    .top-filter.active .select button {
-      background: none;
-      border: #fff 0.1em solid; }
-      .top-filter.active .select button span {
-        color: #fff; }
-    .top-filter.active .actions {
-      opacity: 1;
-      width: auto;
-      overflow: visible; }
   .top-filter.ic {
     padding-left: 3.51563em; }
   .top-filter > .filters {
@@ -493,16 +485,6 @@ div.layout {
         color: #404040; }
         .top-filter > .filters > i.inactive:hover {
           color: #262626; }
-  .top-filter > .actions {
-    float: right;
-    opacity: 0;
-    width: 0;
-    overflow: hidden; }
-  .top-filter > div > span,
-  .top-filter > div > div,
-  .top-filter > div > i,
-  .top-filter > div > button {
-    float: left; }
   .top-filter > i {
     position: absolute;
     left: 0.53333em;
@@ -513,47 +495,38 @@ div.layout {
     margin: 0.55556em 0.25em;
     font-size: 1.5em;
     line-height: 1.5em; }
+  .top-filter > div button,
   .top-filter > div .select button {
-    background: #DDD;
-    border: #DDD 0.1em solid;
-    font-size: 1.4em;
-    margin-top: 0.35em;
-    padding: 0.25em 0.5em; }
-    .top-filter > div .select button span {
-      color: #049cdb; }
+    font-size: 1.4em; }
   .top-filter > div button {
-    background: #333;
-    border: none;
-    margin-top: 0.45em;
-    font-size: 1.4em;
-    padding: 0.25em 1em; }
-    .top-filter > div button span {
-      line-height: 1.5em; }
-  .top-filter > div > button:hover {
-    background: #1a1a1a; }
+    margin-top: 0.45em; }
+  .top-filter > div .select button {
+    margin-top: 0.35em; }
 
 .main-content-list {
   margin-bottom: 6em; }
   .main-content-list li.cl > div {
     cursor: pointer;
     position: relative;
-    padding: 0 1em;
     color: #262626;
     margin-top: 2px; }
-    .main-content-list li.cl > div.active, .main-content-list li.cl > div:hover {
+    .main-content-list li.cl > div:hover {
       background: #049cdb;
-      color: #fff; }
-    .main-content-list li.cl > div > i {
-      color: #404040; }
-    .main-content-list li.cl > div > span,
-    .main-content-list li.cl > div > div {
-      display: block;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis; }
+      color: white; }
+    .main-content-list li.cl > div > div.title {
+      float: left; }
+      .main-content-list li.cl > div > div.title > i {
+        color: #404040; }
+      .main-content-list li.cl > div > div.title > span,
+      .main-content-list li.cl > div > div.title > div {
+        display: block;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis; }
   .main-content-list li.ic > div {
     padding-left: 3.51563em; }
-  .main-content-list li.cl > div > i {
+  .main-content-list li.cl > div > i,
+  .main-content-list li.cl > div > div.title > i {
     position: absolute; }
   .main-content-list > li.cl {
     border-top: #f7f7f7 2px solid;
@@ -565,51 +538,128 @@ div.layout {
       margin-top: 0; }
       .main-content-list > li.cl > div.active, .main-content-list > li.cl > div:hover {
         background: #049cdb; }
-      .main-content-list > li.cl > div > i {
+      .main-content-list > li.cl > div button,
+      .main-content-list > li.cl > div .select button {
+        font-size: 1.233em;
+        margin-top: 0.3em; }
+      .main-content-list > li.cl > div .select button {
+        margin-top: 0.2em; }
+      .main-content-list > li.cl > div > div > span {
+        margin: 0 0.25em; }
+      .main-content-list > li.cl > div > div.title > i {
         left: 0.66667em;
         top: 0.4em;
         font-size: 1.778em; }
-      .main-content-list > li.cl > div > span {
+      .main-content-list > li.cl > div > div.title > span, .main-content-list > li.cl > div > div.actions > span {
         font-size: 1.333em;
         line-height: 1.333em;
         padding: 0.45707em 0; }
     .main-content-list > li.cl > ul li.cl {
       background: #d0d0d0; }
       .main-content-list > li.cl > ul li.cl > div {
-        min-height: 2.61792em;
-        max-height: 2.61792em;
+        min-height: 2.77889em;
+        max-height: 2.77889em;
         background: #eaeaea; }
         .main-content-list > li.cl > ul li.cl > div.active, .main-content-list > li.cl > ul li.cl > div:hover {
           background: #049cdb; }
-        .main-content-list > li.cl > ul li.cl > div > i {
+        .main-content-list > li.cl > ul li.cl > div button,
+        .main-content-list > li.cl > ul li.cl > div .select button {
+          font-size: 1.1em;
+          margin-top: 0.27em; }
+        .main-content-list > li.cl > ul li.cl > div .select button {
+          margin-top: 0.17em; }
+        .main-content-list > li.cl > ul li.cl > div > div > span {
+          margin: 0 0.25em; }
+        .main-content-list > li.cl > ul li.cl > div > div.title > i {
           left: 0.93333em;
           top: 0.25em;
           font-size: 1.778em; }
-        .main-content-list > li.cl > ul li.cl > div > span {
+        .main-content-list > li.cl > ul li.cl > div > div.title > span, .main-content-list > li.cl > ul li.cl > div > div.actions > span {
           font-size: 1.2em;
           line-height: 1.2em;
-          padding: 0.47264em 0; }
+          padding: 0.5263em 0; }
       .main-content-list > li.cl > ul li.cl > ul {
         opacity: .5;
         height: 0;
-        overflow: hidden; }
+        overflow-y: hidden; }
         .main-content-list > li.cl > ul li.cl > ul.expand {
           opacity: 1;
-          height: auto; }
+          height: auto;
+          overflow-y: visible; }
         .main-content-list > li.cl > ul li.cl > ul li.cl > div {
           background: #f7f7f7;
           padding-top: 1px;
           margin-top: 1px; }
           .main-content-list > li.cl > ul li.cl > ul li.cl > div.active, .main-content-list > li.cl > ul li.cl > ul li.cl > div:hover {
             background: #049cdb; }
+          .main-content-list > li.cl > ul li.cl > ul li.cl > div button,
+          .main-content-list > li.cl > ul li.cl > ul li.cl > div .select button {
+            margin-top: 0.2em; }
+          .main-content-list > li.cl > ul li.cl > ul li.cl > div .select button {
+            margin-top: 0.1em; }
         .main-content-list > li.cl > ul li.cl > ul li.cl:first-child > div {
           margin-top: 0; }
+
+.top-filter,
+.main-content-list li.cl > div {
+  position: relative; }
+  .top-filter > .actions,
+  .main-content-list li.cl > div > .actions {
+    position: absolute;
+    right: 1em;
+    opacity: 0;
+    width: 0;
+    overflow: hidden; }
+  .top-filter > div > span,
+  .top-filter > div > div,
+  .top-filter > div > i,
+  .top-filter > div > button,
+  .main-content-list li.cl > div > div > span,
+  .main-content-list li.cl > div > div > div,
+  .main-content-list li.cl > div > div > i,
+  .main-content-list li.cl > div > div > button {
+    float: left; }
+  .top-filter.active,
+  .main-content-list li.cl > div.active {
+    background: #049cdb;
+    color: white; }
+    .top-filter.active .select button,
+    .main-content-list li.cl > div.active .select button {
+      background: none;
+      border: white 2px solid; }
+      .top-filter.active .select button span,
+      .main-content-list li.cl > div.active .select button span {
+        color: white; }
+    .top-filter.active .actions,
+    .main-content-list li.cl > div.active .actions {
+      opacity: 1;
+      width: auto;
+      overflow: visible; }
+  .top-filter > div .select button,
+  .main-content-list li.cl > div > div .select button {
+    background: #dddddd;
+    border: #dddddd 2px solid;
+    padding: 0.25em 0.5em; }
+    .top-filter > div .select button span,
+    .main-content-list li.cl > div > div .select button span {
+      color: #049cdb; }
+  .top-filter > div button,
+  .main-content-list li.cl > div > div button {
+    background: #333333;
+    border: none;
+    padding: 0.25em 1em; }
+    .top-filter > div button span,
+    .main-content-list li.cl > div > div button span {
+      line-height: 1.5em; }
+  .top-filter > div > button:hover,
+  .main-content-list li.cl > div > div > button:hover {
+    background: #1a1a1a; }
 
 .select {
   position: relative; }
   .select button {
     text-align: left;
-    border: #DDD 0.1em solid;
+    border: #dddddd 2px solid;
     position: relative; }
     .select button.active span {
       min-width: 10em; }
@@ -635,7 +685,7 @@ div.layout {
     font-size: 1.1em;
     left: 0;
     top: 2.67273em;
-    background: #fff;
+    background: white;
     width: 100%;
     padding: 0.4em 0;
     border: #c4c4c4 0.1em solid;
@@ -670,7 +720,7 @@ div.layout {
 input[type="submit"].primary,
 button.primary {
   background-color: #049cdb;
-  color: #fff; }
+  color: white; }
   input[type="submit"].primary:hover,
   button.primary:hover {
     background-color: #0378a9;
@@ -702,7 +752,7 @@ input.ng-invalid {
   padding: .5em;
   background-color: #ffc40d;
   border-radius: 0.1875em;
-  color: #333; }
+  color: #333333; }
 
 .select button {
   border-radius: .45em; }
@@ -711,7 +761,7 @@ input.ng-invalid {
 .select .select-dropdown {
   border-radius: .3em;
   position: absolute;
-  background: #fff;
+  background: white;
   border: 0.1em solid #c4c4c4; }
   .select .select-dropdown:after, .select .select-dropdown:before {
     bottom: 100%;
@@ -723,7 +773,7 @@ input.ng-invalid {
     pointer-events: none; }
   .select .select-dropdown:after {
     border-color: rgba(119, 100, 213, 0);
-    border-bottom-color: #fff;
+    border-bottom-color: white;
     border-width: 0.5em;
     left: 50%;
     margin-left: -0.5em;
@@ -738,12 +788,12 @@ input.ng-invalid {
 
 button {
   background-color: #049cdb;
-  color: #fff; }
+  color: white; }
   button:hover {
     background-color: #0378a9;
     color: #e6e6e6; }
   button.secondary {
-    background-color: #333; }
+    background-color: #333333; }
     button.secondary:hover {
       background-color: #1a1a1a; }
 
@@ -753,7 +803,14 @@ button {
   div.layout > aside {
     width: 14em; }
   div.layout > .main {
-    left: 14em; } }
+    margin-left: 14em; } }
+@media screen and (min-width: 82em) {
+  div.layout > header .title {
+    width: 8.5em; }
+  div.layout > aside {
+    width: 17em; }
+  div.layout > .main {
+    margin-left: 17em; } }
 @media screen and (max-width: 94em) {
   .main-content-list.filter-2,
   .top-filter.filter-2 {
@@ -908,5 +965,3 @@ input.ng-invalid {
   transition: opacity cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.4s, max-height cubic-bezier(0, 0.6, 0.85, 1) 0.3s; }
   .main-content-list > li.cl > ul li.cl > ul.expand {
     max-height: 1000px; }
-
-/*# sourceMappingURL=main.css.map */
