--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -17,6 +17,7 @@
 @import 'components/layout';
 @import 'components/modules/top-filter';
 @import 'components/modules/content-list';
+@import 'components/modules/content-filter-list-headers';
 @import 'components/modules/select';
 @import 'components/modules/pagination';
 // finally enhance the components with some theme magic
